[gd_scene load_steps=16 format=3 uid="uid://b7d5rmrbmprps"]

[ext_resource type="Script" path="res://scenes/stages/parallax/centralized_parallax_movement.gd" id="1_7u43o"]
[ext_resource type="Texture2D" uid="uid://dvq5rg3i8m2jk" path="res://assets/textures/parallax/first_stage/skybox_dithering.png" id="2_8vjgw"]
[ext_resource type="Texture2D" uid="uid://bq8udjs11hu6o" path="res://assets/textures/parallax/first_stage/far_clouds.png" id="4_cyyw0"]
[ext_resource type="Texture2D" uid="uid://derkwmko3jp2k" path="res://assets/textures/parallax/first_stage/stars-sheet.png" id="4_rtsbs"]
[ext_resource type="Texture2D" uid="uid://dv4bbdgyuvmg" path="res://assets/textures/parallax/first_stage/clouds_medium.png" id="4_ufu03"]
[ext_resource type="Texture2D" uid="uid://d2m2nu28qamxh" path="res://assets/textures/parallax/first_stage/water.png" id="5_7fuav"]
[ext_resource type="Texture2D" uid="uid://668hdva68ot5" path="res://assets/textures/parallax/first_stage/water_glow.png" id="6_k1nvf"]
[ext_resource type="Texture2D" uid="uid://dbxy5ff4sik07" path="res://assets/textures/parallax/first_stage/closer_clouds.png" id="7_nc7gk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_04rak"]
atlas = ExtResource("4_rtsbs")
region = Rect2(0, 0, 952, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_63uju"]
atlas = ExtResource("4_rtsbs")
region = Rect2(0, 280, 952, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgben"]
atlas = ExtResource("4_rtsbs")
region = Rect2(0, 560, 952, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw4rx"]
atlas = ExtResource("4_rtsbs")
region = Rect2(0, 840, 952, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_y336c"]
atlas = ExtResource("4_rtsbs")
region = Rect2(0, 1120, 952, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptc0f"]
atlas = ExtResource("4_rtsbs")
region = Rect2(0, 1400, 952, 280)

[sub_resource type="SpriteFrames" id="SpriteFrames_ciyf6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04rak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63uju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgben")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw4rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y336c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptc0f")
}],
"loop": true,
"name": &"main_sequence",
"speed": 8.0
}]

[node name="FirstStageParallax" type="ParallaxBackground"]
script = ExtResource("1_7u43o")

[node name="Sky" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(960, 540)

[node name="SkyBG" type="ColorRect" parent="Sky"]
show_behind_parent = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.2, 0.32549, 1)

[node name="SkyDithering" type="ParallaxLayer" parent="."]
position = Vector2(480, 270)
motion_mirroring = Vector2(960, 0)

[node name="Dither" type="Sprite2D" parent="SkyDithering"]
texture = ExtResource("2_8vjgw")

[node name="Stars" type="ParallaxLayer" parent="."]
position = Vector2(-1, -96)
motion_mirroring = Vector2(960, 0)

[node name="StarsAnimation" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(480, 141)
sprite_frames = SubResource("SpriteFrames_ciyf6")
animation = &"main_sequence"
autoplay = "main_sequence"
frame_progress = 0.752999

[node name="FarClouds" type="ParallaxLayer" parent="."]
position = Vector2(0, 72)
motion_mirroring = Vector2(960, 0)

[node name="FarCloudsSprite" type="Sprite2D" parent="FarClouds"]
position = Vector2(0, 164)
texture = ExtResource("4_cyyw0")
centered = false
region_rect = Rect2(0, 96, 960, 304)

[node name="MediumClouds" type="ParallaxLayer" parent="."]
position = Vector2(0, 51)
motion_mirroring = Vector2(960, 0)

[node name="MediumCloudsSprite" type="Sprite2D" parent="MediumClouds"]
position = Vector2(0, 322)
texture = ExtResource("4_ufu03")
centered = false
region_rect = Rect2(0, 306, 960, 104)

[node name="CloserClouds" type="ParallaxLayer" parent="."]
position = Vector2(-1, 0)
motion_mirroring = Vector2(960, 0)

[node name="CloserClouds" type="Sprite2D" parent="CloserClouds"]
position = Vector2(0, 360)
texture = ExtResource("7_nc7gk")
centered = false
region_rect = Rect2(0, 368, 960, 120)

[node name="WaterLevel" type="ParallaxLayer" parent="."]
position = Vector2(0, 1)
motion_offset = Vector2(0, -20)
motion_mirroring = Vector2(960, 0)

[node name="WaterSprite" type="Sprite2D" parent="WaterLevel"]
position = Vector2(-12, 519)
texture = ExtResource("5_7fuav")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 960, 31)

[node name="WaterGlow" type="Sprite2D" parent="WaterLevel"]
modulate = Color(1, 1, 1, 0.788235)
position = Vector2(468, 525)
texture = ExtResource("6_k1nvf")
